--- a/index.html
+++ b/index.html
@@ -16,7 +16,29 @@
     <header class="header">
       <div class="header__wrap container"><a class="logo" href="/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
           <p class="logo__name">торговый комплекс<strong>евроремонт</strong></p></a>
-        <div class="header-nav"><a class="header-nav__link" href="/catalog.html">Каталог</a><a class="header-nav__link" href="">Торговые центры</a><a class="header-nav__link" href="">Компания</a><a class="header-nav__link" href="">Контакты</a><a class="header-nav__link" href="">Помощь</a>
+        <div class="menu__box">
+          <div class="menu__head"><span class="menu__head-text">Меню</span>
+            <button class="menu__close"></button>
+          </div>
+          <div class="header-nav">
+            <div class="header-nav__wrap"><a class="header-nav__link" href="/catalog.html">Каталог</a><a class="header-nav__link" href="">Торговые центры</a><a class="header-nav__link" href="">Компания</a><a class="header-nav__link -hidden" href="">Контакты</a><a class="header-nav__link -hidden" href="">Помощь</a>
+            </div>
+          </div>
+          <table class="contacts-table">
+            <tbody>
+              <tr>
+                <td><span class="phone-text">Телефон</span></td>
+                <td>
+                  <p class="phone">+7 (918) <span>210-30-30</span></p>
+                  <p class="phone">+7 (861) <span>275-09-92</span></p>
+                </td>
+              </tr>
+              <tr>
+                <td><span>E-mail</span></td>
+                <td><span>info@evroremont-tk.ru</span></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="phone-list">
           <div class="phone">
@@ -32,6 +54,7 @@
             <p>+7 (861) <span>275-09-92</span></p>
           </div>
         </div>
+        <button class="menu__toggle" data-menu="no-active"><span></span></button>
       </div>
     </header>
     <main class="main">
@@ -68,8 +91,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -95,8 +117,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -122,8 +143,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -149,8 +169,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -176,8 +195,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -203,8 +221,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -230,8 +247,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -257,8 +273,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info">
-                    <p class="product__name">ТЦ Дверей и напольных покрытий</p>
+                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -288,25 +303,37 @@
       <div class="about -index">
         <div class="about__desc">
           <div class="container">
-            <h2 class="about__title">О компании</h2>
-            <p>
-              Торговый комплекс «Евроремонт» на сегодняшний день включает в себя 5 специализированных торговых центров.
-              Также на территории комплекса представлен рынок строительных материалов. Торговый комплекс расположен в самом центре 
-              города Краснодара, с удобной транспортной и пешей доступностью.
-            </p>
-            <p>Каждый посетитель нашего торгового комплекса сможет найти все необходимые товары для ремонта, создания интерьера и оборудования своего дома.</p>
+            <div class="about__desc-wrap">
+              <h2 class="about__title">О компании</h2>
+              <p>
+                Торговый комплекс «Евроремонт» на сегодняшний день включает в себя 5 специализированных торговых центров.
+                Также на территории комплекса представлен рынок строительных материалов. Торговый комплекс расположен в самом центре 
+                города Краснодара, с удобной транспортной и пешей доступностью.
+              </p>
+              <p>Каждый посетитель нашего торгового комплекса сможет найти все необходимые товары для ремонта, создания интерьера и оборудования своего дома.</p>
+            </div>
           </div>
         </div>
         <div class="about-galery">
-          <div class="about-galery__wrap">
-            <div class="about-galery__row">
-              <div class="about-galery__item -col-2"><img class="about-galery__item-image" src="assets/img/about/galery/1.jpg" alt=""><b class="about-galery__item-name">ТЦ Дверей и напольных покрытий</b></div>
-              <div class="about-galery__item -col-2"><img class="about-galery__item-image" src="assets/img/about/galery/2.jpg" alt=""><b class="about-galery__item-name">ТЦ Строительные материалы</b></div>
+          <div class="about-galery__wrap container">
+            <div class="about-galery__row -col-2">
+              <div class="about-galery__item"><img class="about-galery__item-image" src="assets/img/about/galery/1.jpg" alt="">
+                <p class="about-galery__item-name">ТЦ Дверей и напольных покрытий</p>
+              </div>
+              <div class="about-galery__item"><img class="about-galery__item-image" src="assets/img/about/galery/2.jpg" alt="">
+                <p class="about-galery__item-name">ТЦ Строительные материалы</p>
+              </div>
             </div>
-            <div class="about-galery__row">
-              <div class="about-galery__item -col-3"><img class="about-galery__item-image" src="assets/img/about/galery/3.jpg" alt=""><b class="about-galery__item-name">ТЦ Сантехника и обои</b></div>
-              <div class="about-galery__item -col-3"><img class="about-galery__item-image" src="assets/img/about/galery/4.jpg" alt=""><b class="about-galery__item-name">ТЦ Кухни и кухонное оборудование</b></div>
-              <div class="about-galery__item -col-3"><img class="about-galery__item-image" src="assets/img/about/galery/5.jpg" alt=""><b class="about-galery__item-name">ТЦ Дом</b></div>
+            <div class="about-galery__row -col-3">
+              <div class="about-galery__item"><img class="about-galery__item-image" src="assets/img/about/galery/3.jpg" alt="">
+                <p class="about-galery__item-name">ТЦ Сантехника и обои</p>
+              </div>
+              <div class="about-galery__item"><img class="about-galery__item-image" src="assets/img/about/galery/4.jpg" alt="">
+                <p class="about-galery__item-name">ТЦ Кухни и кухонное оборудование</p>
+              </div>
+              <div class="about-galery__item"><img class="about-galery__item-image" src="assets/img/about/galery/5.jpg" alt="">
+                <p class="about-galery__item-name">ТЦ Дом</p>
+              </div>
             </div>
           </div>
         </div>
@@ -335,17 +362,17 @@
           </div>
           <div class="footer-menu">
             <div class="footer-menu__item">
-              <p class="footer-menu__title">Торговые помещения</p>
+              <h3 class="footer-menu__title">Торговые помещения</h3>
               <div class="footer-menu__wrap"><a class="footer-menu__link" href="">Офисы</a><a class="footer-menu__link" href="">Торговые помещения</a><a class="footer-menu__link" href="">Склады</a>
               </div>
             </div>
             <div class="footer-menu__item">
-              <p class="footer-menu__title">О нас</p>
+              <h3 class="footer-menu__title">О нас</h3>
               <div class="footer-menu__wrap"><a class="footer-menu__link" href="">О компании</a><a class="footer-menu__link" href="">Контакты</a><a class="footer-menu__link" href="">Карта</a><a class="footer-menu__link" href="">Помощь</a>
               </div>
             </div>
             <div class="footer-menu__item">
-              <p class="footer-menu__title">Торговые центры</p>
+              <h3 class="footer-menu__title">Торговые центры</h3>
               <div class="footer-menu__wrap"><a class="footer-menu__link" href="">ТЦ Дверей и напольных покрытий </a><a class="footer-menu__link" href="">ТЦ Строительные материалы</a><a class="footer-menu__link" href="">ТЦ Сантехника и обои</a><a class="footer-menu__link" href="">ТЦ Кухни и кухонное оборудование</a><a class="footer-menu__link" href="">ТЦ Дом</a>
               </div>
             </div>
@@ -354,7 +381,7 @@
       </div>
       <div class="footer__foot">
         <div class="container">
-          <p class="copyright">© 2009-2018 <b>Евроремонт</b></p><a class="agreement" href="">Соглашение об обработке персональных данных</a>
+          <div class="copyright"><span>© 2009-2018</span><b>Евроремонт</b></div><a class="agreement" href=""><span>Соглашение об обработке</span><span>персональных данных</span></a>
           <div class="developer"><span>Разработка<br>и продвижение</span><a class="developer__link" href="http://blaze.su/" target="_blank">
               <svg class="developer__logo">
                 <use xlink:href="assets/img/sprite.svg#Blaze"></use>
@@ -362,5 +389,6 @@
         </div>
       </div>
     </footer>
+    <script src="assets/js/foundation.js"></script>
   </body>
 </html>
